// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalize options snapshot additional entires should added 1`] = `
{
  "main": [
    "<prefix>/dist/clients/WebSocketClient.js",
    "<prefix>/rspack-dev-client/dist/index.js?protocol=ws%3A&hostname=0.0.0.0&&pathname=%2Fws&logging=info&overlay=true&reconnect=10&hot=true&live-reload=true",
    "<prefix>/rspack-dev-client/dist/devServer.js",
    "<prefix>/rspack-dev-client/dist/reactRefresh.js",
    "<prefix>/./placeholder.js",
  ],
}
`;

exports[`normalize options snapshot no options 1`] = `
{
  "allowedHosts": "auto",
  "bonjour": false,
  "client": {
    "logging": "info",
    "overlay": true,
    "reconnect": 10,
    "webSocketURL": {},
  },
  "compress": true,
  "devMiddleware": {},
  "historyApiFallback": false,
  "host": undefined,
  "hot": true,
  "liveReload": true,
  "magicHtml": true,
  "open": [],
  "port": 8082,
  "server": {
    "options": {},
    "type": "http",
  },
  "setupExitSignals": true,
  "static": [
    {
      "directory": "<PROJECT_ROOT>/public",
      "publicPath": [
        "/",
      ],
      "serveIndex": {
        "icons": true,
      },
      "staticOptions": {},
      "watch": {
        "alwaysStat": true,
        "atomic": false,
        "followSymlinks": false,
        "ignoreInitial": true,
        "ignorePermissionErrors": true,
        "ignored": undefined,
        "interval": undefined,
        "persistent": true,
        "usePolling": false,
      },
    },
  ],
  "watchFiles": [],
  "webSocketServer": {
    "options": {
      "path": "/ws",
    },
    "type": "ws",
  },
}
`;

exports[`normalize options snapshot port string 1`] = `
{
  "allowedHosts": "auto",
  "bonjour": false,
  "client": {
    "logging": "info",
    "overlay": true,
    "reconnect": 10,
    "webSocketURL": {},
  },
  "compress": true,
  "devMiddleware": {},
  "historyApiFallback": false,
  "host": undefined,
  "hot": true,
  "liveReload": true,
  "magicHtml": true,
  "open": [],
  "port": 9000,
  "server": {
    "options": {},
    "type": "http",
  },
  "setupExitSignals": true,
  "static": [
    {
      "directory": "<PROJECT_ROOT>/public",
      "publicPath": [
        "/",
      ],
      "serveIndex": {
        "icons": true,
      },
      "staticOptions": {},
      "watch": {
        "alwaysStat": true,
        "atomic": false,
        "followSymlinks": false,
        "ignoreInitial": true,
        "ignorePermissionErrors": true,
        "ignored": undefined,
        "interval": undefined,
        "persistent": true,
        "usePolling": false,
      },
    },
  ],
  "watchFiles": [],
  "webSocketServer": {
    "options": {
      "path": "/ws",
    },
    "type": "ws",
  },
}
`;

exports[`normalize options snapshot react-refresh client added when react/refresh enabled 1`] = `
{
  "main": [
    "<prefix>/dist/clients/WebSocketClient.js",
    "<prefix>/rspack-dev-client/dist/index.js?protocol=ws%3A&hostname=0.0.0.0&&pathname=%2Fws&logging=info&overlay=true&reconnect=10&hot=true&live-reload=true",
    "<prefix>/rspack-dev-client/dist/devServer.js",
    "<prefix>/rspack-dev-client/dist/reactRefresh.js",
    "<prefix>/./placeholder.js",
  ],
}
`;
